--- a/workout.html
+++ b/workout.html
@@ -151,8 +151,12 @@
           <div id="exerciseHeader" style="display: none; opacity: 0" class="header-current animated"  v-show="!popup">
             <div class="workout-navigation">
               <div id="repText" class="generic-text-style-2" v-if="StatusCode200 == true">{{exerciseType}}</div>
-              <div id="safeTimerDisplay" ref="time"  class="generic-text-style-3" v-if="StatusCode200 == true">
-             <span>{{parseInt(this.roundData[this.workout.round].Amounts_Name_Linked_Exercises[this.workout.exercises])}}</span>
+              <div v-if="StatusCode200 == true">
+                <div id="safeTimerDisplay" ref="time"  class="generic-text-style-3" v-show="exerciseType !== 'Reps'">
+                </div>
+                <div class="generic-text-style-3" v-show="exerciseType == 'Reps'">
+                  {{exerciseAmount}}
+                  </div>
               </div>
               <a href="#scroll" class="nav-workout-button panel-button w-inline-block">
                 <div class="nav-cog-icon"></div>
