--- a/workout.html
+++ b/workout.html
@@ -132,7 +132,7 @@
     background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, .28));
 }
 
-    </style>
+  </style>
   </style>
   <link rel="manifest" href="manifest.json" />
   <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
@@ -347,9 +347,12 @@
                       </div>
                     </div>
                     <div class="diff-trigger">
-                      <div class="counter-btn" v-if="StatusCode200 == true && min == 0" style="cursor: default !important;">
+                      <div class="counter-btn" v-if="StatusCode200 == true && exerciseMin - 1 == 0" style="cursor: default !important;">
                       </div>
-                      <div class="counter-btn" v-on:click="ChangeDifficulty(0, this.$refs.video, this.$refs.min)" v-if="StatusCode200 == true && min !== 0">
+                      <div class="counter-btn" v-on:click="ChangeDifficulty(0, this.$refs.video, this.$refs.min)" v-if="StatusCode200 == true && exerciseMin !== 0 && loadedExercise !== true">
+                        <div class="counter-arrow left"></div>
+                      </div>
+                      <div class="counter-btn" v-if="loadedExercise == true">
                         <div class="counter-arrow left"></div>
                       </div>
                       <div class="counter-num">
@@ -357,10 +360,13 @@
                         <div class="num divider">/</div>
                         <div class="num limit" ref="max" v-if="StatusCode200 == true">{{exerciseMax}}</div>
                       </div>
-                      <div class="counter-btn" v-on:click="ChangeDifficulty(1, this.$refs.video, this.$refs.min)" v-if="StatusCode200 == true && min + 1 !== exerciseMax">
+                      <div class="counter-btn" v-on:click="ChangeDifficulty(1, this.$refs.video, this.$refs.min)" v-if="StatusCode200 == true && exerciseMin + 1 !== exerciseMax && loadedExercise !== true">
                         <div class="counter-arrow right"></div>
                       </div>
-                      <div class="counter-btn" v-if="StatusCode200 == true && min + 1 == exerciseMax" style="cursor: default !important;">
+                      <div class="counter-btn" v-if="loadedExercise == true">
+                        <div class="counter-arrow right"></div>
+                      </div>
+                      <div class="counter-btn" v-if="StatusCode200 == true && exerciseMin + 1 == exerciseMax" style="cursor: default !important;">
                       </div>
                     </div>
                   </div>
