--- a/workout-overview.html
+++ b/workout-overview.html
@@ -167,7 +167,7 @@ overflow-x: hidden;
   <div id="app" w-el="load_app" class="app">
     <div w-el="workout_overview_page" class="app-main app-base">
       <div class="header">
-        <a href="#" class="header-nav-button back-button-on top-level w-inline-block">
+        <a href="/program-hub.html" class="header-nav-button back-button-on w-inline-block">
           <div class="nav-back-icon"></div>
         </a>
         <div class="header-nav-button burger-button">
