--- a/workout.html
+++ b/workout.html
@@ -347,26 +347,26 @@
                       </div>
                     </div>
                     <div class="diff-trigger">
-                      <div class="counter-btn" v-if="StatusCode200 == true && defaultDiffs - 1 == 0" style="cursor: default !important;">
+                      <div class="counter-btn" v-if="StatusCode200 == true && min - 1 == 0" style="cursor: default !important;">
                       </div>
-                      <div class="counter-btn" v-on:click="ChangeDifficulty(0, this.$refs.video, this.$refs.min)" v-if="StatusCode200 == true && defaultDiffs !== 0 && loadedExercise !== true">
+                      <div class="counter-btn" v-on:click="ChangeDifficulty(0, this.$refs.video, this.$refs.min)" v-if="StatusCode200 == true && min !== 0 && loadedExercise !== true">
                         <div class="counter-arrow left"></div>
                       </div>
                       <div class="counter-btn" v-if="loadedExercise == true">
                         <div class="counter-arrow left"></div>
                       </div>
                       <div class="counter-num">
-                        <div class="num current" ref="min" v-if="StatusCode200 == true">{{defaultDiffs}}</div>
+                        <div class="num current" ref="min" v-if="StatusCode200 == true">{{min}}</div>
                         <div class="num divider">/</div>
                         <div class="num limit" ref="max" v-if="StatusCode200 == true">{{exerciseMax - 1}}</div>
                       </div>
-                      <div class="counter-btn" v-on:click="ChangeDifficulty(1, this.$refs.video, this.$refs.min)" v-if="StatusCode200 == true && defaultDiffs + 1 !== exerciseMax && loadedExercise !== true">
+                      <div class="counter-btn" v-on:click="ChangeDifficulty(1, this.$refs.video, this.$refs.min)" v-if="StatusCode200 == true && min + 1 !== exerciseMax && loadedExercise !== true">
                         <div class="counter-arrow right"></div>
                       </div>
                       <div class="counter-btn" v-if="loadedExercise == true">
                         <div class="counter-arrow right"></div>
                       </div>
-                      <div class="counter-btn" v-if="StatusCode200 == true && defaultDiffs + 1 == exerciseMax" style="cursor: default !important;">
+                      <div class="counter-btn" v-if="StatusCode200 == true && min + 1 == exerciseMax" style="cursor: default !important;">
                       </div>
                     </div>
                   </div>
