--- a/recovery.html
+++ b/recovery.html
@@ -116,7 +116,7 @@
   </style>
   </style>
 <link rel="manifest" href="manifest.json" />
-<script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+<script src="https://unpkg.com/vue@3/dist/vue.global.prod.js"></script>
 </head>
 <body>
   <div class="global-app-css w-embed">
