--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
   </div>
   <header class="header_main">
     <div class="header_main_nav_button">
-      <a href="login.html" class="header_main_secondary_button" id="mainBtn"></a>
+      <a href="login.html" class="header_main_secondary_button"></a>
       <div data-w-id="d802454b-ec05-0432-5a55-2d31b48911ed" class="header_main_nav_icon">
         <div class="nav_icon_line"></div>
         <div class="nav_icon_line"></div>
@@ -103,7 +103,7 @@
     <div class="header_main_menu">
       <header class="header_main">
         <div class="header_main_nav_button opened">
-          <a href="login.html" class="header_main_secondary_button opened" id="mainBtn"></a>
+          <a href="login.html" class="header_main_secondary_button opened"></a>
           <div data-w-id="e830f2b1-8e19-209f-65a1-fdc2214c379c" class="header_main_nav_icon">
             <div class="nav_icon_line opened"></div>
             <div class="nav_icon_line opened"></div>
@@ -145,7 +145,11 @@
     </div>
   </header>
   <div id="app" w-el="home_page" class="app index">
-    <div class="app-head index"><img src="images/the_legends-hero_image.jpg" loading="lazy" sizes="100vw" srcset="images/the_legends-hero_image-p-500.jpg 500w, images/the_legends-hero_image-p-800.jpg 800w, images/the_legends-hero_image-p-1080.jpg 1080w, images/the_legends-hero_image-p-1600.jpg 1600w, images/the_legends-hero_image-p-2000.jpg 2000w, images/the_legends-hero_image-p-2600.jpg 2600w, images/the_legends-hero_image-p-3200.jpg 3200w, images/the_legends-hero_image.jpg 6266w" alt="" class="hero_image_home_background"><img src="images/the_legends-logo-green_rotated.svg" loading="lazy" alt="" class="hero_logo_ver_home"><img src="images/the_legends-logo-green_1.svg" loading="lazy" alt="" class="hero_logo_hoz_home"><img src="images/the_legends-hero_image.png" loading="lazy" sizes="100vw" srcset="images/the_legends-hero_image-p-500.png 500w, images/the_legends-hero_image-p-800.png 800w, images/the_legends-hero_image-p-1080.png 1080w, images/the_legends-hero_image-p-1600.png 1600w, images/the_legends-hero_image-p-2000.png 2000w, images/the_legends-hero_image-p-2600.png 2600w, images/the_legends-hero_image.png 3000w" alt="" class="hero_image_home_foreground">
+    <div class="app-head index">
+      <img src="images/the_legends-hero_image.jpg" loading="eager" srcset="images/the_legends-hero_image.jpg" alt="" class="hero_image_home_background">
+      <img src="images/the_legends-logo-green_rotated.svg" loading="eager" alt="" class="hero_logo_ver_home">
+      <img src="images/the_legends-logo-green_1.svg" loading="eager" alt="" class="hero_logo_hoz_home">
+      <img src="images/the_legends-hero_image.png" loading="eager" srcset="images/the_legends-hero_image.png" alt="" class="hero_image_home_foreground">
       <div class="app_scroll_content">
         <div class="main-sub-heading-style-2 style-2">scroll</div><img src="images/the_legends-scroll-icon.svg" loading="lazy" alt="" class="app_scroll_icon">
       </div>
@@ -696,16 +700,15 @@
           <div id="w-node-_1fdf99ad-f882-3673-e0a9-be801ab9ac1f-1ab9ac1a" class="display_footer_controls">
             <ul id="w-node-_1fdf99ad-f882-3673-e0a9-be801ab9ac20-1ab9ac1a" role="list" class="display_footer_navigation w-list-unstyled">
               <li class="display_footer_navigation_button">
-                <a href="index.html" aria-current="page" class="display_footer_navigation_text w--current">The Legends</a>
+                <a href="index.html" class="display_footer_navigation_text">The Legends</a>
               </li>
               <li class="display_footer_navigation_button">
-                <a href="programs.html" class="display_footer_navigation_text">Programs</a>
+                <a href="programs.html" aria-current="page" class="display_footer_navigation_text w--current">Programs</a>
               </li>
             </ul>
             <ul id="w-node-_1fdf99ad-f882-3673-e0a9-be801ab9ac27-1ab9ac1a" role="list" class="display_footer_navigation w-list-unstyled">
               <li class="display_footer_navigation_button">
                 <a href="questionnaire.html" class="display_footer_navigation_text">Questionnaire</a>
-                <link rel="prerender" href="/questionnaire">
               </li>
               <li class="display_footer_navigation_button">
                 <a href="about.html" class="display_footer_navigation_text">About Us</a>
@@ -714,11 +717,9 @@
             <ul id="w-node-_1fdf99ad-f882-3673-e0a9-be801ab9ac2e-1ab9ac1a" role="list" class="display_footer_navigation w-list-unstyled">
               <li class="display_footer_navigation_button">
                 <a href="blogs.html" class="display_footer_navigation_text">Blogs</a>
-                <link rel="prerender" href="/blogs">
               </li>
               <li class="display_footer_navigation_button">
-                <a href="privacy-policy.html" class="display_footer_navigation_text">Privacy Policy</a>
-                <link rel="prerender" href="/privacy-policy">
+                <a href="privacy-policy-2023.html" class="display_footer_navigation_text">Privacy Policy</a>
               </li>
             </ul>
           </div>
