--- a/program-selection.html
+++ b/program-selection.html
@@ -143,7 +143,7 @@ overflow-x: hidden;
 }*/
 </style> -->
   </div>
-  <div id="app" wized-cloak-custom="Load Users Program" class="app">
+  <div id="app" class="app">
     <div id="programSelection" w-el="program_selection_page" class="app-main app-base">
       <div class="header">
         <div data-w-id="b97980a2-f0b6-15f2-7b00-a179567781eb" style="display:none;opacity:0" class="header-nav-button back-button">
