--- a/404.html
+++ b/404.html
@@ -20,6 +20,7 @@
   <script data-wized-id="ISnIcZEHtJQbNBpztLDV" src="https://embed.wized.com"></script>
   <!--  Custom  -->
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/native-jeremy/the-legends-config/css/styles-u17.css">
+  <script defer src="js/other/userid.js"></script>
   <!--  Scroll Speed CSS -->
   <style>
 	html { 
@@ -62,14 +63,139 @@
 </style>
 </head>
 <body>
-  <div class="utility-page-wrap">
-    <div class="utility-page-content"><img src="images/the_legends-logo-green.svg" alt="">
-      <h2 class="main-heading-style-1 margin-top-bottom">Page Not Found</h2>
-      <div class="body-copy-text-style-1">The page you are looking for doesn&#x27;t exist or has been moved</div>
+  <div class="app index">
+    <header class="header_main">
+      <div class="header_main_nav_button">
+        <a href="login.html" class="header_main_secondary_button"></a>
+        <div data-w-id="d802454b-ec05-0432-5a55-2d31b48911ed" class="header_main_nav_icon">
+          <div class="nav_icon_line"></div>
+          <div class="nav_icon_line"></div>
+          <div class="nav_icon_line"></div>
+        </div>
+      </div>
+      <a href="index.html" class="header_main_brand w-inline-block"><img src="images/the_legends-logo-black.svg" loading="lazy" alt="" class="brand_icon"></a>
+      <div class="header_main_menu">
+        <header class="header_main">
+          <div class="header_main_nav_button opened">
+            <a href="login.html" class="header_main_secondary_button opened" id="mainBtn"></a>
+            <div data-w-id="e830f2b1-8e19-209f-65a1-fdc2214c379c" class="header_main_nav_icon">
+              <div class="nav_icon_line opened"></div>
+              <div class="nav_icon_line opened"></div>
+              <div class="nav_icon_line opened"></div>
+            </div>
+          </div>
+          <a href="#" class="header_main_brand w-inline-block"><img src="images/the_legends-logo-white.svg" loading="lazy" alt="" class="brand_icon"></a>
+        </header>
+        <div class="content main_menu_content">
+          <div class="main_navigation">
+            <ul role="list" class="nav_list">
+              <li class="nav_item">
+                <a href="index.html" class="nav_link">The Legends</a>
+              </li>
+              <li class="nav_item">
+                <a href="programs.html" class="nav_link">Programs</a>
+              </li>
+              <li class="nav_item">
+                <a href="questionnaire.html" class="nav_link">Questionnaire</a>
+              </li>
+              <li class="nav_item">
+                <a href="about.html" aria-current="page" class="nav_link w--current">About Us</a>
+              </li>
+              <li class="nav_item">
+                <a href="blogs.html" class="nav_link">Blogs</a>
+              </li>
+              <li class="nav_item">
+                <a href="privacy-policy.html" class="nav_link">Privacy Policy</a>
+              </li>
+            </ul>
+          </div>
+          <div class="header_main_menu_fineprint">
+            <a href="#" class="main_link mr_xsml w-inline-block"><img src="images/the_legends-instagram-logo_gem-white.svg" loading="lazy" alt="" class="main_social"></a>
+            <a href="#" class="main_link w-inline-block"><img src="images/the_legends-facebook-logo_gem-white.svg" loading="lazy" alt="" class="main_social"></a>
+            <p class="footer_fineprint">The Legends are on Facebook and Instagram. © 2023 The Legends. Website by <a href="https://nativedesign.com.au/?gclid=Cj0KCQjwoeemBhCfARIsADR2QCtU3Ojz0rDmZWNzQnHK_JEr5JaE-JzRGSgqxWZZCryCrdX29sQBQjwaAjlkEALw_wcB" target="_blank" class="main_native">Native</a>
+            </p>
+          </div>
+        </div>
+      </div>
+    </header>
+      <div class="app-head collection-list-page">
+        <div class="app-head-content">
+          <div class="content full-height">
+            <div class="content-block style-2" style="display: flex; align-items: center; justify-content: center;">
+              <div class="utility-page-content"><img src="images/the_legends-logo-green.svg" alt="">
+                <h2 class="main-heading-style-1 margin-top-bottom">Page Not Found</h2>
+                <div class="body-copy-text-style-1">The page you are looking for doesn&#x27;t exist or has been moved</div>
+              </div>
+            </div>
+            <div class="info-block auto-margin">
+              <a href="/index.html" class="button-style-3 top-level w-button">Home</a>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
+  </div>
+  <footer class="app-footer">
+    <div class="content center app_footer_block">
+      <div class="w-layout-grid app_footer_block">
+        <div id="w-node-_1fdf99ad-f882-3673-e0a9-be801ab9ac1d-1ab9ac1a" class="display_footer_image"><img src="images/the_legends-logo-black.svg" loading="lazy" id="w-node-_1fdf99ad-f882-3673-e0a9-be801ab9ac1e-1ab9ac1a" alt="" class="img_footer"></div>
+        <div id="w-node-_1fdf99ad-f882-3673-e0a9-be801ab9ac1f-1ab9ac1a" class="display_footer_controls">
+          <ul id="w-node-_1fdf99ad-f882-3673-e0a9-be801ab9ac20-1ab9ac1a" role="list" class="display_footer_navigation w-list-unstyled">
+            <li class="display_footer_navigation_button">
+              <a href="index.html" class="display_footer_navigation_text">The Legends</a>
+            </li>
+            <li class="display_footer_navigation_button">
+              <a href="programs.html" aria-current="page" class="display_footer_navigation_text w--current">Programs</a>
+            </li>
+          </ul>
+          <ul id="w-node-_1fdf99ad-f882-3673-e0a9-be801ab9ac27-1ab9ac1a" role="list" class="display_footer_navigation w-list-unstyled">
+            <li class="display_footer_navigation_button">
+              <a href="questionnaire.html" class="display_footer_navigation_text">Questionnaire</a>
+            </li>
+            <li class="display_footer_navigation_button">
+              <a href="about.html" class="display_footer_navigation_text">About Us</a>
+            </li>
+          </ul>
+          <ul id="w-node-_1fdf99ad-f882-3673-e0a9-be801ab9ac2e-1ab9ac1a" role="list" class="display_footer_navigation w-list-unstyled">
+            <li class="display_footer_navigation_button">
+              <a href="blogs.html" class="display_footer_navigation_text">Blogs</a>
+            </li>
+            <li class="display_footer_navigation_button">
+              <a href="privacy-policy-2023.html" class="display_footer_navigation_text">Privacy Policy</a>
+            </li>
+          </ul>
+        </div>
+        <div id="w-node-_1fdf99ad-f882-3673-e0a9-be801ab9ac35-1ab9ac1a" class="display_footer_fineprint">
+          <a href="#" class="footer_link mr_xsml w-inline-block"><img src="images/the-farm-shed-instagram-black.svg" loading="lazy" alt="" class="footer_social"></a>
+          <a href="#" class="footer_link w-inline-block"><img src="images/the-farm-shed-facebook-black.svg" loading="lazy" alt="" class="footer_social"></a>
+          <p class="footer_fineprint">The Legends are on Facebook and Instagram. © 2023 The Legends. Website by <a href="https://nativedesign.com.au/?gclid=Cj0KCQjwoeemBhCfARIsADR2QCtU3Ojz0rDmZWNzQnHK_JEr5JaE-JzRGSgqxWZZCryCrdX29sQBQjwaAjlkEALw_wcB" target="_blank" class="footer_native">Native</a>
+          </p>
+        </div>
+      </div>
+    </div>
+  </footer>
+  <div class="loading-state-v2" style="background-color: white; display: flex !important;">
+    <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" width="200" height="200px" viewBox="0 0 256 256">
+      <defs>
+      </defs>
+      <path class="path3" stroke="#397234" d="m190.4,125.6h-60.1V61.1H61.1v133.7h133.7v-69.3l-4.4.1h0Zm-124.8-60h60.1v59.9h-60.1v-59.9Zm0,64.5h60.1v60.3h-60.1v-60.3Zm124.8,60.3h-60.1v-60.3h60.1v60.3Z"/>
+    </svg>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6474932b31758d71131214b7" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/the-legends-web-app.js" type="text/javascript"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js" integrity="sha512-z4OUqw38qNLpn1libAN9BsoDx6nbNFio5lA6CuTp9NlK83b89hgyCVq+N5FdBJptINztxn1Z3SaKSKUS5UP60Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="js/other/misc.js" type="text/javascript"></script>
+  <script>
+    anime({
+      targets: '.path3',
+      strokeDashoffset: [anime.setDashoffset, 0],
+      easing: 'cubicBezier(.5, .05, .1, .3)',
+      duration: 2000,
+      delay: function(el, i) { return i * 250 },
+      direction: 'alternate',
+      loop: true
+    });
+    setTimeout(() => {document.querySelector('.loading-state-v2').style.display = "none"}, 1250);
+  </script>
 </body>
 </html>
