--- a/about.html
+++ b/about.html
@@ -61,6 +61,7 @@
 }
 </style>
   <link rel="manifest" href="manifest.json" />
+  <script src="js/other/userid.js"></script>
   <script src="https://unpkg.com/vue@3/dist/vue.global.prod.js"></script>
 </head>
 <body>
@@ -324,26 +325,23 @@
               <a href="index.html" class="display_footer_navigation_text">The Legends</a>
             </li>
             <li class="display_footer_navigation_button">
-              <a href="programs.html" class="display_footer_navigation_text">Programs</a>
+              <a href="programs.html" aria-current="page" class="display_footer_navigation_text w--current">Programs</a>
             </li>
           </ul>
           <ul id="w-node-_1fdf99ad-f882-3673-e0a9-be801ab9ac27-1ab9ac1a" role="list" class="display_footer_navigation w-list-unstyled">
             <li class="display_footer_navigation_button">
               <a href="questionnaire.html" class="display_footer_navigation_text">Questionnaire</a>
-              <link rel="prerender" href="/questionnaire">
             </li>
             <li class="display_footer_navigation_button">
-              <a href="about.html" aria-current="page" class="display_footer_navigation_text w--current">About Us</a>
+              <a href="about.html" class="display_footer_navigation_text">About Us</a>
             </li>
           </ul>
           <ul id="w-node-_1fdf99ad-f882-3673-e0a9-be801ab9ac2e-1ab9ac1a" role="list" class="display_footer_navigation w-list-unstyled">
             <li class="display_footer_navigation_button">
               <a href="blogs.html" class="display_footer_navigation_text">Blogs</a>
-              <link rel="prerender" href="/blogs">
             </li>
             <li class="display_footer_navigation_button">
-              <a href="privacy-policy.html" class="display_footer_navigation_text">Privacy Policy</a>
-              <link rel="prerender" href="/privacy-policy">
+              <a href="privacy-policy-2023.html" class="display_footer_navigation_text">Privacy Policy</a>
             </li>
           </ul>
         </div>
@@ -359,8 +357,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js" integrity="sha512-z4OUqw38qNLpn1libAN9BsoDx6nbNFio5lA6CuTp9NlK83b89hgyCVq+N5FdBJptINztxn1Z3SaKSKUS5UP60Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6474932b31758d71131214b7" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/the-legends-web-app.js" type="text/javascript"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js" integrity="sha512-z4OUqw38qNLpn1libAN9BsoDx6nbNFio5lA6CuTp9NlK83b89hgyCVq+N5FdBJptINztxn1Z3SaKSKUS5UP60Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="js/other/misc.js" type="text/javascript"></script>
-  <script src="js/other/userid.js"></script>
   <script src="js/other/about.js" type="text/javascript"></script>
 </body>
 </html>
