--- a/blogs.html
+++ b/blogs.html
@@ -165,13 +165,12 @@
                 <a href="index.html" class="display_footer_navigation_text">The Legends</a>
               </li>
               <li class="display_footer_navigation_button">
-                <a href="programs.html" class="display_footer_navigation_text">Programs</a>
+                <a href="programs.html" aria-current="page" class="display_footer_navigation_text w--current">Programs</a>
               </li>
             </ul>
             <ul id="w-node-_1fdf99ad-f882-3673-e0a9-be801ab9ac27-1ab9ac1a" role="list" class="display_footer_navigation w-list-unstyled">
               <li class="display_footer_navigation_button">
                 <a href="questionnaire.html" class="display_footer_navigation_text">Questionnaire</a>
-                <link rel="prerender" href="/questionnaire">
               </li>
               <li class="display_footer_navigation_button">
                 <a href="about.html" class="display_footer_navigation_text">About Us</a>
@@ -179,12 +178,10 @@
             </ul>
             <ul id="w-node-_1fdf99ad-f882-3673-e0a9-be801ab9ac2e-1ab9ac1a" role="list" class="display_footer_navigation w-list-unstyled">
               <li class="display_footer_navigation_button">
-                <a href="blogs.html" aria-current="page" class="display_footer_navigation_text w--current">Blogs</a>
-                <link rel="prerender" href="/blogs">
+                <a href="blogs.html" class="display_footer_navigation_text">Blogs</a>
               </li>
               <li class="display_footer_navigation_button">
-                <a href="privacy-policy.html" class="display_footer_navigation_text">Privacy Policy</a>
-                <link rel="prerender" href="/privacy-policy">
+                <a href="privacy-policy-2023.html" class="display_footer_navigation_text">Privacy Policy</a>
               </li>
             </ul>
           </div>
@@ -201,6 +198,6 @@
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6474932b31758d71131214b7" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/the-legends-web-app.js" type="text/javascript"></script>
   <script src="js/other/misc.js" type="text/javascript"></script>
-  <script src="js/other/userid.js"></script>
+  <script defer src="js/other/userid.js"></script>
 </body>
 </html>
