--- a/preferences.html
+++ b/preferences.html
@@ -129,7 +129,7 @@ overflow-x: hidden;
 }*/
 </style> -->
   </div>
-  <div wized-cloak-custom="Load Users Program Hub, Load Users, Load Users Program " w-el="load_app" class="app">
+  <div w-el="load_app" class="app">
     <div class="app-main">
       <div class="header">
         <a href="#" class="header-nav-button back-button-on top-level w-inline-block">
@@ -407,36 +407,16 @@ overflow-x: hidden;
       <div id="trigger" class="loading-trigger"></div>
     </div>
   </div>
-  <div class="loading-state">
-    <div class="state-loader w-embed">
-      <?xml version="1.0" encoding="utf-8"?>
-      <!--  Generator: Adobe Illustrator 27.3.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)   -->
-      <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewbox="0 0 51 51" style="enable-background:new 0 0 51 51;" xml:space="preserve">
-        <style type="text/css">
-	.st0{fill:currentColor}
-	.st1{opacity:0.5;fill:#FFFFFF;}
-	.st2{opacity:0.5;fill:#2D2D2D;}
-	.st3{opacity:0.6;enable-background:new    ;}
-	.st4{opacity:0.5;fill:#E5E5E5;enable-background:new    ;}
-	.st5{fill:#2C2C2C;}
-	.st6{fill:#397234;}
-	.st7{fill:#E5E5E5;}
-	.st8{clip-path:url(#SVGID_00000108990525427981984240000017916791293283631794_);}
-	.st9{fill:#2D2D2D;}
-	.st10{opacity:0.5;}
-	.st11{fill:#A5A5A5;}
-	.st12{enable-background:new    ;}
-	.st13{clip-path:url(#SVGID_00000044883729532008097830000007788899246430571955_);}
-</style>
-        <path id="Subtraction_8" class="st0" d="M25.5,51c-3.4,0-6.8-0.7-9.9-2C9.5,46.4,4.6,41.5,2,35.4c-1.3-3.1-2-6.5-2-9.9h3.7
-	c0,12,9.8,21.8,21.8,21.8c5.8,0,11.3-2.3,15.4-6.4c8.5-8.5,8.5-22.3,0-30.8C36.8,6,31.3,3.7,25.5,3.7V0c5.1,0,10,1.5,14.3,4.4
-	c1.4,0.9,2.6,2,3.8,3.1c2.3,2.3,4.2,5.1,5.5,8.1c2.7,6.3,2.7,13.5,0,19.9c-1.9,4.6-5.1,8.5-9.2,11.2C35.5,49.5,30.6,51,25.5,51z"></path>
-      </svg>
-    </div>
-    <div id="trigger" class="loading-trigger"></div>
+  <div class="loading-state-v2" style="background-color: white; display: flex !important;">
+    <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" width="200" height="200px" viewBox="0 0 256 256">
+      <defs>
+      </defs>
+      <path class="path3" stroke="#397234" d="m190.4,125.6h-60.1V61.1H61.1v133.7h133.7v-69.3l-4.4.1h0Zm-124.8-60h60.1v59.9h-60.1v-59.9Zm0,64.5h60.1v60.3h-60.1v-60.3Zm124.8,60.3h-60.1v-60.3h60.1v60.3Z"/>
+    </svg>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6474932b31758d71131214b7" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/the-legends-web-app.js" type="text/javascript"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js" integrity="sha512-z4OUqw38qNLpn1libAN9BsoDx6nbNFio5lA6CuTp9NlK83b89hgyCVq+N5FdBJptINztxn1Z3SaKSKUS5UP60Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="js/other/misc.js" type="text/javascript"></script>
   <script src="js/other/audio-controls.js" type="text/javascript"></script>
 </body>
