--- a/privacy-policy-2023.html
+++ b/privacy-policy-2023.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html><!--  Last Published: Tue Nov 07 2023 02:33:37 GMT+0000 (Coordinated Universal Time)  -->
-<html data-wf-page="652de2d2a39d12c64b3d88eb" data-wf-site="6474932b31758d71131214b7" lang="en">
+<html data-wf-page="652de2d2a39d12c64b3d890c" data-wf-site="6474932b31758d71131214b7" lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Blog Post</title>
-  <meta content="Blog Post" property="og:title">
-  <meta content="Blog Post" property="twitter:title">
+  <title>Programs</title>
+  <meta content="Programs" property="og:title">
+  <meta content="Programs" property="twitter:title">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <link href="css/components.css" rel="stylesheet" type="text/css">
@@ -60,38 +60,8 @@
 	}
 }
 </style>
-  <style>
-img { 
-	border: 0px, solid, transparent !important;
-}
-#richText p img { 
-	max-height: 500px;
-}
- #richText h2 {
-  font-size: 22px;
-  line-height: 32px;
-  font-weight: 600;
-}
-@media screen and (max-width: 767px) {
-    #richText p img { 
-        max-height: 400px;
-    }
-    #richText h2 {
-    	font-size: 20px;
-    	line-height: 30px;
-  	}
-  }
-  @media screen and (max-width: 479px) {
-    #richText p img { 
-       max-height: 300px;
-    }
-    #richText h2 {
-      font-size: 15px;
-      line-height: 20px;
-    }
-  }
-</style>
 <link rel="manifest" href="manifest.json" />
+<script defer src="js/other/userid.js"></script>
 </head>
 <body>
   <div class="overrides_css w-embed">
@@ -111,10 +81,10 @@ img {
   }
 </style>
   </div>
-  <div w-el="blog_page" class="app index">
+  <div w-el="privacy_page" class="app index">
     <header class="header_main">
       <div class="header_main_nav_button">
-        <a href="login.html" class="header_main_secondary_button" id="mainBtn"></a>
+        <a href="login.html" class="header_main_secondary_button"></a>
         <div data-w-id="d802454b-ec05-0432-5a55-2d31b48911ed" class="header_main_nav_icon">
           <div class="nav_icon_line"></div>
           <div class="nav_icon_line"></div>
@@ -125,7 +95,7 @@ img {
       <div class="header_main_menu">
         <header class="header_main">
           <div class="header_main_nav_button opened">
-            <a href="login.html" class="header_main_secondary_button opened"></a>
+            <a href="login.html" class="header_main_secondary_button opened" id="mainBtn"></a>
             <div data-w-id="e830f2b1-8e19-209f-65a1-fdc2214c379c" class="header_main_nav_icon">
               <div class="nav_icon_line opened"></div>
               <div class="nav_icon_line opened"></div>
@@ -147,7 +117,7 @@ img {
                 <a href="questionnaire.html" class="nav_link">Questionnaire</a>
               </li>
               <li class="nav_item">
-                <a href="about.html" class="nav_link">About Us</a>
+                <a href="about.html" aria-current="page" class="nav_link w--current">About Us</a>
               </li>
               <li class="nav_item">
                 <a href="blogs.html" class="nav_link">Blogs</a>
@@ -166,58 +136,64 @@ img {
         </div>
       </div>
     </header>
-    <div class="app-head about"><img src="https://d3e54v103j8qbb.cloudfront.net/plugins/Basic/assets/placeholder.60f9b1840c.svg" loading="lazy" w-el="blog_img" alt="" class="hero_image_individual"></div>
-    <div class="app-section">
-      <div class="content">
-        <a href="#" class="back_static_button top-level w-inline-block"><img src="images/the_legends-arrow-down-black.svg" loading="lazy" alt="" class="back_static_arrow">
-          <div>back</div>
-        </a>
-        <div id="richText" class="content richtext"></div>
-      </div>
-    </div>
-    <footer class="app-footer">
-      <div class="content center app_footer_block">
-        <div class="w-layout-grid app_footer_block">
-          <div id="w-node-_1fdf99ad-f882-3673-e0a9-be801ab9ac1d-1ab9ac1a" class="display_footer_image"><img src="images/the_legends-logo-black.svg" loading="lazy" id="w-node-_1fdf99ad-f882-3673-e0a9-be801ab9ac1e-1ab9ac1a" alt="" class="img_footer"></div>
-          <div id="w-node-_1fdf99ad-f882-3673-e0a9-be801ab9ac1f-1ab9ac1a" class="display_footer_controls">
-            <ul id="w-node-_1fdf99ad-f882-3673-e0a9-be801ab9ac20-1ab9ac1a" role="list" class="display_footer_navigation w-list-unstyled">
-              <li class="display_footer_navigation_button">
-                <a href="index.html" class="display_footer_navigation_text">The Legends</a>
-              </li>
-              <li class="display_footer_navigation_button">
-                <a href="programs.html" class="display_footer_navigation_text">Programs</a>
-              </li>
-            </ul>
-            <ul id="w-node-_1fdf99ad-f882-3673-e0a9-be801ab9ac27-1ab9ac1a" role="list" class="display_footer_navigation w-list-unstyled">
-              <li class="display_footer_navigation_button">
-                <a href="questionnaire.html" class="display_footer_navigation_text">Questionnaire</a>
-                <link rel="prerender" href="/questionnaire">
-              </li>
-              <li class="display_footer_navigation_button">
-                <a href="about.html" class="display_footer_navigation_text">About Us</a>
-              </li>
-            </ul>
-            <ul id="w-node-_1fdf99ad-f882-3673-e0a9-be801ab9ac2e-1ab9ac1a" role="list" class="display_footer_navigation w-list-unstyled">
-              <li class="display_footer_navigation_button">
-                <a href="blogs.html" class="display_footer_navigation_text">Blogs</a>
-                <link rel="prerender" href="/blogs">
-              </li>
-              <li class="display_footer_navigation_button">
-                <a href="privacy-policy.html" class="display_footer_navigation_text">Privacy Policy</a>
-                <link rel="prerender" href="/privacy-policy">
-              </li>
-            </ul>
-          </div>
-          <div id="w-node-_1fdf99ad-f882-3673-e0a9-be801ab9ac35-1ab9ac1a" class="display_footer_fineprint">
-            <a href="#" class="footer_link mr_xsml w-inline-block"><img src="images/the-farm-shed-instagram-black.svg" loading="lazy" alt="" class="footer_social"></a>
-            <a href="#" class="footer_link w-inline-block"><img src="images/the-farm-shed-facebook-black.svg" loading="lazy" alt="" class="footer_social"></a>
-            <p class="footer_fineprint">The Legends are on Facebook and Instagram. © 2023 The Legends. Website by <a href="https://nativedesign.com.au/?gclid=Cj0KCQjwoeemBhCfARIsADR2QCtU3Ojz0rDmZWNzQnHK_JEr5JaE-JzRGSgqxWZZCryCrdX29sQBQjwaAjlkEALw_wcB" target="_blank" class="footer_native">Native</a>
-            </p>
+      <div class="app-head collection-list-page">
+        <div class="app-head-content">
+          <div class="content full-height">
+            <div class="content-headings half-margin">
+              <h1 w-el="privacy_policy_heading" class="main-heading-style-1">Loading..</h1>
+            </div>
+            <div class="content-block style-2">
+              <div w-el="privacy_policy_description" class="container">
+                Loading..
+              </div>
+            </div>
+            <div class="info-block auto-margin">
+              <a href="#" class="button-style-3 top-level w-button">Back</a>
+            </div>
           </div>
         </div>
       </div>
-    </footer>
+    </div>
   </div>
+  <footer class="app-footer">
+    <div class="content center app_footer_block">
+      <div class="w-layout-grid app_footer_block">
+        <div id="w-node-_1fdf99ad-f882-3673-e0a9-be801ab9ac1d-1ab9ac1a" class="display_footer_image"><img src="images/the_legends-logo-black.svg" loading="lazy" id="w-node-_1fdf99ad-f882-3673-e0a9-be801ab9ac1e-1ab9ac1a" alt="" class="img_footer"></div>
+        <div id="w-node-_1fdf99ad-f882-3673-e0a9-be801ab9ac1f-1ab9ac1a" class="display_footer_controls">
+          <ul id="w-node-_1fdf99ad-f882-3673-e0a9-be801ab9ac20-1ab9ac1a" role="list" class="display_footer_navigation w-list-unstyled">
+            <li class="display_footer_navigation_button">
+              <a href="index.html" class="display_footer_navigation_text">The Legends</a>
+            </li>
+            <li class="display_footer_navigation_button">
+              <a href="programs.html" aria-current="page" class="display_footer_navigation_text w--current">Programs</a>
+            </li>
+          </ul>
+          <ul id="w-node-_1fdf99ad-f882-3673-e0a9-be801ab9ac27-1ab9ac1a" role="list" class="display_footer_navigation w-list-unstyled">
+            <li class="display_footer_navigation_button">
+              <a href="questionnaire.html" class="display_footer_navigation_text">Questionnaire</a>
+            </li>
+            <li class="display_footer_navigation_button">
+              <a href="about.html" class="display_footer_navigation_text">About Us</a>
+            </li>
+          </ul>
+          <ul id="w-node-_1fdf99ad-f882-3673-e0a9-be801ab9ac2e-1ab9ac1a" role="list" class="display_footer_navigation w-list-unstyled">
+            <li class="display_footer_navigation_button">
+              <a href="blogs.html" class="display_footer_navigation_text">Blogs</a>
+            </li>
+            <li class="display_footer_navigation_button">
+              <a href="privacy-policy-2023.html" class="display_footer_navigation_text">Privacy Policy</a>
+            </li>
+          </ul>
+        </div>
+        <div id="w-node-_1fdf99ad-f882-3673-e0a9-be801ab9ac35-1ab9ac1a" class="display_footer_fineprint">
+          <a href="#" class="footer_link mr_xsml w-inline-block"><img src="images/the-farm-shed-instagram-black.svg" loading="lazy" alt="" class="footer_social"></a>
+          <a href="#" class="footer_link w-inline-block"><img src="images/the-farm-shed-facebook-black.svg" loading="lazy" alt="" class="footer_social"></a>
+          <p class="footer_fineprint">The Legends are on Facebook and Instagram. © 2023 The Legends. Website by <a href="https://nativedesign.com.au/?gclid=Cj0KCQjwoeemBhCfARIsADR2QCtU3Ojz0rDmZWNzQnHK_JEr5JaE-JzRGSgqxWZZCryCrdX29sQBQjwaAjlkEALw_wcB" target="_blank" class="footer_native">Native</a>
+          </p>
+        </div>
+      </div>
+    </div>
+  </footer>
   <div class="loading-state-v2" style="background-color: white; display: flex !important;">
     <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" width="200" height="200px" viewBox="0 0 256 256">
       <defs>
@@ -228,35 +204,18 @@ img {
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6474932b31758d71131214b7" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/the-legends-web-app.js" type="text/javascript"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js" integrity="sha512-z4OUqw38qNLpn1libAN9BsoDx6nbNFio5lA6CuTp9NlK83b89hgyCVq+N5FdBJptINztxn1Z3SaKSKUS5UP60Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <script src="https://unpkg.com/showdown/dist/showdown.min.js" type="text/javascript"></script>
   <script src="js/other/misc.js" type="text/javascript"></script>
-  <script src="js/other/userid.js"></script>
   <script>
-window.onload = async () => {  
-    Wized.request.await("Load Blog", (response) => {  
-    	const snapshot = response.data;
-      let richTextRes = snapshot.Rich_Text;
-      const richText = document.getElementById("richText");
-      if(response.status == 200)
-      {
-      document.title = snapshot.Name;
-      var converter = new showdown.Converter(),
-    text      = richTextRes,
-    html      = converter.makeHtml(text);
-    richText.innerHTML = html;   
-       } 
-    })
     anime({
-          targets: '.path3',
-          strokeDashoffset: [anime.setDashoffset, 0],
-          easing: 'cubicBezier(.5, .05, .1, .3)',
-          duration: 2000,
-          delay: function(el, i) { return i * 250 },
-          direction: 'alternate',
-          loop: true
-        });
-    setTimeout(() => {document.querySelector('.loading-state-v2').style.display = "none"}, 3000);
-};
+      targets: '.path3',
+      strokeDashoffset: [anime.setDashoffset, 0],
+      easing: 'cubicBezier(.5, .05, .1, .3)',
+      duration: 2000,
+      delay: function(el, i) { return i * 250 },
+      direction: 'alternate',
+      loop: true
+    });
+setTimeout(() => {document.querySelector('.loading-state-v2').style.display = "none"}, 2000);
 </script>
 </body>
 </html>
