--- a/programs.html
+++ b/programs.html
@@ -83,7 +83,7 @@
   <div w-el="programs_page" class="app index">
     <header class="header_main">
       <div class="header_main_nav_button">
-        <a href="login.html" class="header_main_secondary_button" id="mainBtn"></a>
+        <a href="login.html" class="header_main_secondary_button"></a>
         <div data-w-id="d802454b-ec05-0432-5a55-2d31b48911ed" class="header_main_nav_icon">
           <div class="nav_icon_line"></div>
           <div class="nav_icon_line"></div>
@@ -110,13 +110,13 @@
                 <a href="index.html" class="nav_link">The Legends</a>
               </li>
               <li class="nav_item">
-                <a href="programs.html" aria-current="page" class="nav_link w--current">Programs</a>
+                <a href="programs.html" class="nav_link">Programs</a>
               </li>
               <li class="nav_item">
                 <a href="questionnaire.html" class="nav_link">Questionnaire</a>
               </li>
               <li class="nav_item">
-                <a href="about.html" class="nav_link">About Us</a>
+                <a href="about.html" aria-current="page" class="nav_link w--current">About Us</a>
               </li>
               <li class="nav_item">
                 <a href="blogs.html" class="nav_link">Blogs</a>
@@ -180,7 +180,6 @@
             <ul id="w-node-_1fdf99ad-f882-3673-e0a9-be801ab9ac27-1ab9ac1a" role="list" class="display_footer_navigation w-list-unstyled">
               <li class="display_footer_navigation_button">
                 <a href="questionnaire.html" class="display_footer_navigation_text">Questionnaire</a>
-                <link rel="prerender" href="/questionnaire">
               </li>
               <li class="display_footer_navigation_button">
                 <a href="about.html" class="display_footer_navigation_text">About Us</a>
@@ -189,11 +188,9 @@
             <ul id="w-node-_1fdf99ad-f882-3673-e0a9-be801ab9ac2e-1ab9ac1a" role="list" class="display_footer_navigation w-list-unstyled">
               <li class="display_footer_navigation_button">
                 <a href="blogs.html" class="display_footer_navigation_text">Blogs</a>
-                <link rel="prerender" href="/blogs">
               </li>
               <li class="display_footer_navigation_button">
-                <a href="privacy-policy.html" class="display_footer_navigation_text">Privacy Policy</a>
-                <link rel="prerender" href="/privacy-policy">
+                <a href="privacy-policy-2023.html" class="display_footer_navigation_text">Privacy Policy</a>
               </li>
             </ul>
           </div>
@@ -210,7 +207,7 @@
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6474932b31758d71131214b7" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/the-legends-web-app.js" type="text/javascript"></script>
   <script src="js/other/misc.js" type="text/javascript"></script>
-  <script src="js/other/userid.js"></script>
   <script src="js/programs/programs.js" type="text/javascript"></script>
+  <script defer src="js/other/userid.js"></script>
 </body>
 </html>
