--- a/recovery-overview.html
+++ b/recovery-overview.html
@@ -163,7 +163,7 @@ overflow-x: hidden;
 }*/
 </style> -->
   </div>
-  <div id="app" w-el="load_app" wized-cloak-custom="Load Users Program Hub, Load Users, Load Users Program" class="app">
+  <div id="app" w-el="load_app" class="app">
     <div w-el="recovery_overview_page" class="app-main app-base">
       <div class="header">
         <a href="#" class="header-nav-button back-button-on w-inline-block">
@@ -541,8 +541,16 @@ overflow-x: hidden;
       <div id="trigger" class="loading-trigger"></div>
     </div>
   </div>
+  <div class="loading-state-v2" style="background-color: white; display: flex !important;">
+    <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" width="200" height="200px" viewBox="0 0 256 256">
+      <defs>
+      </defs>
+      <path class="path3" stroke="#397234" d="m190.4,125.6h-60.1V61.1H61.1v133.7h133.7v-69.3l-4.4.1h0Zm-124.8-60h60.1v59.9h-60.1v-59.9Zm0,64.5h60.1v60.3h-60.1v-60.3Zm124.8,60.3h-60.1v-60.3h60.1v60.3Z"/>
+    </svg>
+  </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6474932b31758d71131214b7" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/the-legends-web-app.js" type="text/javascript"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js" integrity="sha512-z4OUqw38qNLpn1libAN9BsoDx6nbNFio5lA6CuTp9NlK83b89hgyCVq+N5FdBJptINztxn1Z3SaKSKUS5UP60Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="js/other/misc.js" type="text/javascript"></script>
   <script src="https://unpkg.com/showdown/dist/showdown.min.js" type="text/javascript"></script>
   <script src="js/recoveries/recovery-overview.js" type="text/javascript"></script>
