--- a/blog-post.html
+++ b/blog-post.html
@@ -114,14 +114,14 @@ img {
   <div w-el="blog_page" class="app index">
     <header class="header_main">
       <div class="header_main_nav_button">
-        <a href="login.html" class="header_main_secondary_button" id="mainBtn"></a>
+        <a href="login.html" class="header_main_secondary_button"></a>
         <div data-w-id="d802454b-ec05-0432-5a55-2d31b48911ed" class="header_main_nav_icon">
           <div class="nav_icon_line"></div>
           <div class="nav_icon_line"></div>
           <div class="nav_icon_line"></div>
         </div>
       </div>
-      <a href="index.html" class="header_main_brand w-inline-block"><img src="images/the_legends-logo-black.svg" loading="lazy" alt="" class="brand_icon"></a>
+      <a href="index.html" aria-current="page" class="header_main_brand w-inline-block w--current"><img src="images/the_legends-logo-black.svg" loading="lazy" alt="" class="brand_icon"></a>
       <div class="header_main_menu">
         <header class="header_main">
           <div class="header_main_nav_button opened">
@@ -138,7 +138,7 @@ img {
           <div class="main_navigation">
             <ul role="list" class="nav_list">
               <li class="nav_item">
-                <a href="index.html" class="nav_link">The Legends</a>
+                <a href="index.html" aria-current="page" class="nav_link w--current">The Legends</a>
               </li>
               <li class="nav_item">
                 <a href="programs.html" class="nav_link">Programs</a>
@@ -153,7 +153,7 @@ img {
                 <a href="blogs.html" class="nav_link">Blogs</a>
               </li>
               <li class="nav_item">
-                <a href="privacy-policy.html" class="nav_link">Privacy Policy</a>
+                <a href="privacy-policy-2023.html" class="nav_link">Privacy Policy</a>
               </li>
             </ul>
           </div>
