--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
               <a href="blogs.html" class="nav_link">Blogs</a>
             </li>
             <li class="nav_item">
-              <a href="privacy-policy.html" class="nav_link">Privacy Policy</a>
+              <a href="privacy-policy-2023.html" class="nav_link">Privacy Policy</a>
             </li>
           </ul>
         </div>
@@ -399,7 +399,6 @@
                 </ul>
               </div>
               <a href="questionnaire.html" class="button-style-2 card_button mt_xsml w-button">Start questionnaire</a>
-              <link rel="prerender" href="/questionnaire">
             </div>
           </div>
           <div id="w-node-cfbb80ff-e389-e820-bc7b-5e96e20d4081-4b3d8895" class="display_price_cell">
@@ -436,7 +435,7 @@
                   </li>
                 </ul>
               </div>
-              <a href="questionnaire.html" target="_blank" class="button-style-1 card_button mt_xsml w-button">Start questionnaire</a>
+              <a href="questionnaire.html"class="button-style-1 card_button mt_xsml w-button">Start questionnaire</a>
             </div>
           </div>
           <div id="w-node-_20944fee-7bc1-2b9e-dde7-b0c0506ee43a-4b3d8895" class="display_price_cell">
@@ -474,7 +473,6 @@
                 </ul>
               </div>
               <a href="questionnaire.html" class="button-style-1 card_button mt_xsml w-button">Start questionnaire</a>
-              <link rel="prerender" href="/questionnaire">
             </div>
           </div>
         </div>
@@ -516,7 +514,6 @@
                     </ul>
                   </div>
                   <a href="questionnaire.html" class="button-style-2 card_button mt_xsml w-button">Start questionnaire</a>
-                  <link rel="prerender" href="/questionnaire">
                 </div>
               </div>
             </div>
@@ -595,7 +592,6 @@
                     </ul>
                   </div>
                   <a href="questionnaire.html" class="button-style-1 card_button mt_xsml w-button">Start questionnaire</a>
-                  <link rel="prerender" href="/questionnaire">
                 </div>
               </div>
             </div>
