--- a/privacy-policy-2023.html
+++ b/privacy-policy-2023.html
@@ -91,11 +91,11 @@
           <div class="nav_icon_line"></div>
         </div>
       </div>
-      <a href="index.html" class="header_main_brand w-inline-block"><img src="images/the_legends-logo-black.svg" loading="lazy" alt="" class="brand_icon"></a>
+      <a href="index.html" aria-current="page" class="header_main_brand w-inline-block w--current"><img src="images/the_legends-logo-black.svg" loading="lazy" alt="" class="brand_icon"></a>
       <div class="header_main_menu">
         <header class="header_main">
           <div class="header_main_nav_button opened">
-            <a href="login.html" class="header_main_secondary_button opened" id="mainBtn"></a>
+            <a href="login.html" class="header_main_secondary_button opened"></a>
             <div data-w-id="e830f2b1-8e19-209f-65a1-fdc2214c379c" class="header_main_nav_icon">
               <div class="nav_icon_line opened"></div>
               <div class="nav_icon_line opened"></div>
@@ -108,7 +108,7 @@
           <div class="main_navigation">
             <ul role="list" class="nav_list">
               <li class="nav_item">
-                <a href="index.html" class="nav_link">The Legends</a>
+                <a href="index.html" aria-current="page" class="nav_link w--current">The Legends</a>
               </li>
               <li class="nav_item">
                 <a href="programs.html" class="nav_link">Programs</a>
@@ -117,13 +117,13 @@
                 <a href="questionnaire.html" class="nav_link">Questionnaire</a>
               </li>
               <li class="nav_item">
-                <a href="about.html" aria-current="page" class="nav_link w--current">About Us</a>
+                <a href="about.html" class="nav_link">About Us</a>
               </li>
               <li class="nav_item">
                 <a href="blogs.html" class="nav_link">Blogs</a>
               </li>
               <li class="nav_item">
-                <a href="privacy-policy.html" class="nav_link">Privacy Policy</a>
+                <a href="privacy-policy-2023.html" class="nav_link">Privacy Policy</a>
               </li>
             </ul>
           </div>
