--- a/blogs.html
+++ b/blogs.html
@@ -83,18 +83,18 @@
   <div w-el="blogs_page" class="app index">
     <header class="header_main">
       <div class="header_main_nav_button">
-        <a href="login.html" class="header_main_secondary_button" id="mainBtn"></a>
+        <a href="login.html" class="header_main_secondary_button"></a>
         <div data-w-id="d802454b-ec05-0432-5a55-2d31b48911ed" class="header_main_nav_icon">
           <div class="nav_icon_line"></div>
           <div class="nav_icon_line"></div>
           <div class="nav_icon_line"></div>
         </div>
       </div>
-      <a href="index.html" class="header_main_brand w-inline-block"><img src="images/the_legends-logo-black.svg" loading="lazy" alt="" class="brand_icon"></a>
+      <a href="index.html" aria-current="page" class="header_main_brand w-inline-block w--current"><img src="images/the_legends-logo-black.svg" loading="lazy" alt="" class="brand_icon"></a>
       <div class="header_main_menu">
         <header class="header_main">
           <div class="header_main_nav_button opened">
-            <a href="login.html" class="header_main_secondary_button opened">Login</a>
+            <a href="login.html" class="header_main_secondary_button opened"></a>
             <div data-w-id="e830f2b1-8e19-209f-65a1-fdc2214c379c" class="header_main_nav_icon">
               <div class="nav_icon_line opened"></div>
               <div class="nav_icon_line opened"></div>
@@ -107,7 +107,7 @@
           <div class="main_navigation">
             <ul role="list" class="nav_list">
               <li class="nav_item">
-                <a href="index.html" class="nav_link">The Legends</a>
+                <a href="index.html" aria-current="page" class="nav_link w--current">The Legends</a>
               </li>
               <li class="nav_item">
                 <a href="programs.html" class="nav_link">Programs</a>
@@ -119,10 +119,10 @@
                 <a href="about.html" class="nav_link">About Us</a>
               </li>
               <li class="nav_item">
-                <a href="blogs.html" aria-current="page" class="nav_link w--current">Blogs</a>
+                <a href="blogs.html" class="nav_link">Blogs</a>
               </li>
               <li class="nav_item">
-                <a href="privacy-policy.html" class="nav_link">Privacy Policy</a>
+                <a href="privacy-policy-2023.html" class="nav_link">Privacy Policy</a>
               </li>
             </ul>
           </div>
@@ -195,9 +195,29 @@
       </div>
     </footer>
   </div>
+  <div class="loading-state-v2" style="background-color: white; display: flex !important;">
+    <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" width="200" height="200px" viewBox="0 0 256 256">
+      <defs>
+      </defs>
+      <path class="path3" stroke="#397234" d="m190.4,125.6h-60.1V61.1H61.1v133.7h133.7v-69.3l-4.4.1h0Zm-124.8-60h60.1v59.9h-60.1v-59.9Zm0,64.5h60.1v60.3h-60.1v-60.3Zm124.8,60.3h-60.1v-60.3h60.1v60.3Z"/>
+    </svg>
+  </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6474932b31758d71131214b7" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/the-legends-web-app.js" type="text/javascript"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js" integrity="sha512-z4OUqw38qNLpn1libAN9BsoDx6nbNFio5lA6CuTp9NlK83b89hgyCVq+N5FdBJptINztxn1Z3SaKSKUS5UP60Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="js/other/misc.js" type="text/javascript"></script>
   <script defer src="js/other/userid.js"></script>
+  <script>
+    anime({
+      targets: '.path3',
+      strokeDashoffset: [anime.setDashoffset, 0],
+      easing: 'cubicBezier(.5, .05, .1, .3)',
+      duration: 2000,
+      delay: function(el, i) { return i * 250 },
+      direction: 'alternate',
+      loop: true
+    });
+    setTimeout(() => {document.querySelector('.loading-state-v2').style.display = "none"}, 2000);
+</script>
 </body>
 </html>
