--- a/programs.html
+++ b/programs.html
@@ -155,7 +155,7 @@
         </div>
       </div>
     </div>
-    <div class="app-banner style_2">
+    <div class="app-banner style_2" style="display: none;">
       <div class="content center">
         <div class="app_content_block sml_mid">
           <h2 id="Heading_Call_To_Action" class="main-heading-style-20">Loading...</h2>
