--- a/program-hub.html
+++ b/program-hub.html
@@ -467,7 +467,7 @@ overflow-x: hidden;
       </div>
     </div>
   </div>
-  <div class="loading-state-v2" style="background-color: white;" ref="loader">
+  <div class="loading-state-v2" style="background-color: white;" ref="loader" style="display: none;">
     <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" width="200" height="200px" viewBox="0 0 256 256">
       <defs>
       </defs>
