--- a/questionnaire.html
+++ b/questionnaire.html
@@ -316,7 +316,7 @@ overflow-x: hidden;
               </div>
               <div class="multi-step-form-fields">
                 <a w-el="onsubmit_questionnaire_form" href="#" class="button-style-1-2 no-margin hide w-button">Let’s create your programs</a>
-                <a id="emailValid" w-el="onsubmit_questionnaire_form2" href="#" class="button-style-1-2 no-margin w-button">Let’s create your programs</a>
+                <button id="emailValid" w-el="onsubmit_questionnaire_form2" href="#" class="button-style-1-2 no-margin w-button">Let’s create your programs</button>
                 <a href="#question-1" id="emailNotValid" class="button-style-1-2 no-margin hide w-button">email is already taken</a>
                 <a href="#question-7" class="button-style-4 form-button w-button">Back to previous question</a>
               </div>
